# alone-in-the-dark-internal

./: .gitignore  CMakeLists.txt  README.md
src/: d3d11hook.cpp  gdk.h
